--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"eslint-plugin-import": "2.26.0",
 		"eslint-plugin-n": "15.2.2",
 		"eslint-plugin-promise": "6.0.0",
-		"husky": "^8.0.1",
-		"lint-staged": "^13.0.2",
+		"husky": "8.0.1",
+		"lint-staged": "13.0.2",
 		"nodemon": "2.0.16",
 		"prettier": "2.7.0"
 	},
